--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8082
 
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+server.port=8080
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/roadtransport
+spring.datasource.url=jdbc:mysql://localhost:3306/vehical_finance
 spring.datasource.username=root
 spring.datasource.password=Reset123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -10,5 +10,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
-hibernate.dialect.storage_engine=innodb
 
